k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: client-deploy
spec:
    replicas: 3
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
              - name: client
                image: sashakil/final-client
                ports:
                  -  containerPort: 3000
