k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
    labels:
        component: api
spec:
    replicas: 3
    selector:
        matchLabels:
             component: api
    template:
        metadata: 
            labels:
                component: api
        spec:
            containers:
              -  name: api
                 image: sashakil/final-server
                 ports:
                   -  containerPort: 5000
