k8s/server-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
    name: api-cluster-ip
spec:
    type: ClusterIP
    selector:
        component: api
    ports:
      -  port: 5000
         targetPort: 5000
